관리자 유저등록, 기타 페이지 텍스트 수정, 포트번호 3005->3000 수정, test테이블페이지 수정

--- a/views/home/profile.ejs
+++ b/views/home/profile.ejs
@@ -5,6 +5,12 @@
   <%- include('../partials/head');%>
 </head>
 
+<script>
+  function msg() {
+    alert("비밀번호가 변경되었습니다.");
+  }
+</script>
+
 <body>
   <!-- NAVBAR ======================================== -->
   <%- include('../partials/navbar');%>
