--- a/views/home/userlist.ejs
+++ b/views/home/userlist.ejs
@@ -30,7 +30,7 @@
                   <div>
                     <button type="button" , class="btn btn-link" style="float:right;" , id="user_delete">삭제</button>
                     <button type="button" , class="btn btn-link" style="float:right;" ,
-                      onclick="location.href='reg.html'" ;>등록</button>
+                      onclick="location.href='/user_reg'" ;>등록</button>
                   </div>
                 </div>
                 <div class="panel-body">
