--- a/views/home/register.ejs
+++ b/views/home/register.ejs
@@ -52,6 +52,11 @@
     </style>
 
 </head>
+<script>
+  function msg() {
+    alert("사용가능한 아이디 입니다.");
+  }
+</script>
 
 <body>
   <!-- MAIN CONTENT ========================================= -->
