세션 로그인, 로그아웃, 회원정보 리스트 수정

--- a/views/home/dashboard.ejs
+++ b/views/home/dashboard.ejs
@@ -89,7 +89,7 @@
                       <tr>
                         <td>
                           <div class="dashboard__username">
-                            김철수
+                            도슬기
                           </div>
                         </td>
                         <td>
