--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -10,7 +10,7 @@
         <i class="fa fa-bars"></i>
       </a>
       <!-- Navbar: Sign out -->
-      <a href="/" class="navbar-btn navbar-right btn btn-accent">
+      <a href="/logout" class="navbar-btn navbar-right btn btn-accent">
         로그아웃
       </a>
     </div><!-- /.navbar-collapse -->
