--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -33,3 +33,6 @@
 <script src="assets/js/kite.js"></script>
 <!-- endbuild -->
 <script src="assets/js/custom.js"></script>
+
+<!--chart.js  -->
+<script src="assets/chart.js/dist/chart.js"></script>
