--- a/views/home/code.ejs
+++ b/views/home/code.ejs
@@ -5,6 +5,13 @@
   <%- include('../partials/head');%>
 </head>
 
+<!-- 코드 선택 스타일-->
+<style>
+  .form-code{
+    margin: 15px;
+  }
+</style>
+
 <body>
   <!-- NAVBAR ======================================== -->
   <%- include('../partials/navbar');%>
@@ -29,6 +36,15 @@
               <div class="panel panel-default">
                 <div class="panel-heading">
                   <h3 class="panel-title">Code Lists</h3>
+                </div>
+                <div class="form-code">
+                  <label for="subject">코드 유형</label>
+                  <select class="code-select">
+                    <option selected disabled>코드를 선택하세요.</option>
+                    <option value="code_id1">게시판코드</option>
+                    <option value="code_id2">국가코드</option>
+                    <option value="code_id3">언어코드</option>
+                  </select>
                 </div>
                 <div>
                   <button type="button" , class="btn btn-link" style="float:right;" , id="user_delete">삭제</button>
