--- a/views/home/user_reg.ejs
+++ b/views/home/user_reg.ejs
@@ -5,6 +5,13 @@
   <%- include('../partials/head');%>
 </head>
 
+
+<script>
+  function msg() {
+    alert("사용가능한 아이디 입니다.");
+  }
+</script>
+
 <body>
   <!-- NAVBAR ======================================== -->
   <%- include('../partials/navbar');%>
@@ -29,11 +36,9 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-xs-12">
-            
             <h3 class="page-header">
               사용자 등록
             </h3>
-
           </div>
         </div> <!-- / .row -->
         <div class="row">
@@ -43,50 +48,24 @@
               <div class="panel-heading">
               </div>
               <div class="panel-body">
-                <form>
-					<!--
-  <div class="form-group">
-                   <label class="col-sm-2 control-label">코드그룹</label>
-                    <div class="col-sm-10">
-                      <select class="form-control">
-                        <option selected disabled>코드그룹을 선택하세요.</option>
-                        <option>대사관</option>
-                        <option>뉴스</option>
-                      </select>
-                    </div>
+                <div class="form-group">
+                  <label for="subject">사용자명</label>
+                  <input type="username" class="form-control" id="name">
+                </div>
+                <div class="form-group">
+                  <label for="user_id">사용자ID</label>
+                  <div class="in-line">
+                    <input type="userid" class="form-control" id="user_id">
+                    <input type="submit" class="btn btn-default"  onclick="msg()" value="중복확인">
                   </div>
-					-->
-				<!--	
-                  <div class="form-group">
-                    <label class="col-sm-2 control-label">코드</label>
-                    <div class="col-sm-10">
-                      <select class="form-control">
-                        <option selected disabled>코드를 선택하세요.</option>
-                        <option>A001</option>
-                        <option>A002</option>
-                        <option>A003</option>
-                        <option>B001</option>
-                        <option>B002</option>
-                      </select>
-                    </div>
-                  </div>
-						-->
-                  <div class="form-group">
-                    <label for="subject">사용자ID</label>
-                    <input type="text" class="form-control" id="subject">
-                  </div>
-					
-                  <div class="form-group">
-                    <label for="subject">비밀번호</label>
-                    <input type="text" class="form-control" id="subject">
-                  </div>			
-					
-	                  <div class="form-group">
-                    <label for="subject">사용자명</label>
-                    <input type="text" class="form-control" id="subject">
-                  </div>				
-					
-                  <button type="submit" class="btn btn-primary">등록</button>
+                </div>
+          
+                <div class="form-group">
+                  <label for="password">비밀번호</label>
+                  <input type="password" class="form-control" id="password">
+                </div>			
+
+                <button type="submit" class="btn btn-primary">등록</button>
               </div>
             </div>
           </div>
