--- a/views/home/langcode.ejs
+++ b/views/home/langcode.ejs
@@ -67,7 +67,7 @@
                           <td><%=data.reg_date%></td>
                           <td>
                             <form>
-                              <button type="button" class="btn btn-success" onclick="location.href='/langcode_edit?id=<%=data.code_idx%>'">수정</button>
+                              <button type="button" class="btn btn-success" onclick="location.href='/langcode_edit?index=<%=data.code_idx%>'">수정</button>
                             </form>
                           </td>
                           <td>
