--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -10,10 +10,9 @@
         <i class="fa fa-bars"></i>
       </a>
       <!-- Navbar: Sign out -->
-      <form action="/logout" method="post">
-        <input type="submit" class="navbar-btn navbar-right btn btn-accent" value="로그아웃">
-      </form>
-
+      <a href="/logout" class="navbar-btn navbar-right btn btn-accent">
+        로그아웃
+      </a>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
