--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -35,11 +35,9 @@
         </a>
       </li>
       <li>
-        <a href="#" onclick="document.getElementById('logout').submit();">
+        <a href="/logout">
           <i class="fa fa-sign-out"></i> 로그아웃
         </a>
-        <form id="logout" action="/logout" method="POST">
-        </form>
       </li>
     </ul>
   </nav>
