--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -29,8 +29,8 @@
 <!--build:js assets/js/theme.min.js -->
 <script src="js/theme.js"></script>
 <!-- endbuild -->
-<!--build:js assets/js/kite.min.js -->
-<script src="js/kite.js"></script>
+<!--build:js assets/js/kite.min.js 
+<script src="js/kite.js"></script>-->
 <!-- endbuild -->
 <script src="js/custom.js"></script>
 
